# etho_annotator

./: README.md  pyproject.toml  setup.py
src/etho_annotator/: __init__.py  app.py  form.py  formbuilder.py  roi.py  tab.py
test/: test_annotations.ipynb
test/playback/dat/rpi9-20210409_093149/: rpi9-20210409_093149_analysis.yaml
test/playback/workflow/: snakefile
test/playback/workflow/analysis_profiles/: cop tracker drift.yaml  default.yaml  new.yaml  split and sleap.yaml  tracker and deepposekit and sleap.yaml  tracker and postprocess drift.yaml  tracker and postprocess.yaml
