[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "etho-annotator"
version = "0.1.1"
description = "GUI tool for annotating ethological videos."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "av",
    "defopt",
    "matplotlib",
    "numpy",
    "pyqtgraph",
    "pyside6",
    "pyyaml",
    "qtpy",
    "rich",
]

[project.scripts]
ea = "etho_annotator.app:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
etho_annotator = ["*.yaml"]
